# Corgi-Lake

./: .gitignore  CMakeLists.txt  README.md
Simulator/: Simulator.sln
Simulator/Simulator/: Advanced Architecture.sln  Advanced Architecture.vcxproj  Advanced Architecture.vcxproj.filters  Advanced-Architecture.sln  Advanced-Architecture.vcxproj  Advanced-Architecture.vcxproj.filters  NoncCopyable.cpp  RegisterFile.cpp  Simulator.cpp  Simulator.vcxproj  Simulator.vcxproj.filters  alu.cpp  alu.h  assembler.cpp  assembler.h  bank.cpp  bank.h  basic_suite.c  benchmark_runner  benchmark_runner.cpp  benchmark_runner.h  benchmark_suite.corg  branch_predictor.cpp  branch_unit.cpp  branch_unit.h  buffer.cpp  buffer.h  component.h  data.h  factorial.corg  fetcher.cpp  fetcher.h  gcd.corg  instruction.cpp  instruction.h  label_test.corg  load_store.cpp  load_store.h  makefile  memory.cpp  (+25 more)
Simulator/Simulator/include/: alu.h  assembler.h  bank.h  benchmark_runner.h  branch_predictor.h  branch_unit.h  buffer.h  component.h  data.h  fetcher.h  instruction.h  load_store.h  memory.h  opcode.h  opcode_settings.h  register_file.h  reorder_buffer.h  reservation_station.h  result.h  saturating_counter.h  simulator.h  simulator_state.h  state.h  static_branch_predictor.h
Simulator/Simulator/src/: Simulator.cpp  reorder_buffer.cpp  reservation_station.cpp  saturating_counter.cpp  static_branch_predictor.cpp  stdafx.cpp
Simulator/Simulator/src/components/: alu.cpp  bank.cpp  branch_unit.cpp  component.cpp  fetcher.cpp  load_store.cpp  memory.cpp
Simulator/Simulator/src/data_model/: instruction.cpp  opcode.cpp  result.cpp
Simulator/Simulator/src/modules/: RegisterFile.cpp  branch_predictor.cpp  buffer.cpp
Simulator/Simulator/tests/: compiler_test.corg  dot_product.corg  factorial.corg  fib.corg  math_only.corg  matrixmul.corg  max_ipc.corg  out.corg  qs.corg  quicksort.corg  swapsort.corg  vector_add.corg  vector_sum.corg
tools/: CorgiScript.g4  CorgiScript.interp  CorgiScriptGenerator.py  CorgiScriptLexer.interp  CorgiScriptLexer.py  CorgiScriptLexer.tokens  CorgiScriptListener.py  CorgiScriptParser.py  CorgiScriptVisitor.py  corg.py  out.corg  test1.w  test2.w
tools/src/: fibonnaci.w  matrixmul.w  quicksort.w  swapsort.w  test1.w  test2.w  test3.w  testArray.w
(+2 files in other folders)
